--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -10,6 +10,7 @@ article {
 
 article header {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   font-weight: bold;
 }
@@ -42,17 +43,17 @@ footer div i {
 }
 
 .fa-flag:hover {
-  color: goldenrod;
+  color: orange;
   cursor: pointer
  }
 
  .fa-retweet:hover {
-  color: goldenrod;
+  color: orangered;
   cursor: pointer
  }
 
  .fa-heart:hover {
-  color: goldenrod;
+  color: lightpink;
   cursor: pointer
  }
 
